--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,58 +8,61 @@
     tools:context=".MainActivity"
     android:layout_marginStart="20dp">
 
-
     <TextView
         android:id="@+id/biking_TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="22sp"
-        android:textColor="@android:color/background_dark"/>
+        android:textColor="@android:color/background_dark"
+        android:textSize="22sp" />
 
-    <TextView
-        android:id="@+id/downstairs_TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="22sp"
-        android:textColor="@android:color/background_dark"/>
+
     <TextView
         android:id="@+id/jogging_TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="22sp"
-        android:textColor="@android:color/background_dark"/>
-    <TextView
-        android:id="@+id/sitting_TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="22sp"
-        android:textColor="@android:color/background_dark"/>
-    <TextView
-        android:id="@+id/standing_TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="22sp"
-        android:textColor="@android:color/background_dark"/>
-
-    <TextView
-        android:id="@+id/upstairs_TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="22sp"
-        android:textColor="@android:color/background_dark"/>
+        android:textColor="@android:color/background_dark"
+        android:textSize="22sp" />
 
     <TextView
         android:id="@+id/walking_TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="22sp"
-        android:textColor="@android:color/background_dark"/>
+        android:textColor="@android:color/background_dark"
+        android:textSize="22sp" />
+
+    <TextView
+        android:id="@+id/upstairs_TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textColor="@android:color/background_dark"
+        android:textSize="22sp" />
+
+    <TextView
+        android:id="@+id/sitting_TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textColor="@android:color/background_dark"
+        android:textSize="22sp" />
+
+    <TextView
+        android:id="@+id/standing_TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textColor="@android:color/background_dark"
+        android:textSize="22sp" />
+
+    <TextView
+        android:id="@+id/downstairs_TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textColor="@android:color/background_dark"
+        android:textSize="22sp" />
 
 </LinearLayout>
